# aegis-os

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  _fix_e501.py  coverage.json  docker-compose.yml  environment.yml  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
.github/workflows/: audit-schema-conformance.yml  ci.yml
docs/: agent-sdk-guide.md  alerts.yml  api-reference.md  architecture_decisions.md  audit-event-schema.json  compliance-guide.md  deployment-guide.md  policy-guide.md  prometheus.yml  repo-transfer-prep.md  research.md  roadmap.md  threat-model.md
docs/research/: NHI_research.md
docs/runbooks/: budget-exceeded.md  hitl-stuck-approval.md  loop-detected.md  opa-server-down.md  token-renewal-failure.md
policies/: agent_access.rego  budget.rego
scripts/: verify_pending_approval_demo.py
src/: config.py  main.py
src/adapters/: anthropic_adapter.py  base.py  local_llama.py  openai_adapter.py
src/audit_vault/: compliance.py  logger.py
src/control_plane/: approval_service.py  data_converter.py  orchestrator.py  router.py  scheduler.py  worker.py
src/governance/: guardrails.py  replay_store.py  session_mgr.py
src/governance/policy_engine/: __init__.py  opa_client.py
src/watchdog/: budget_enforcer.py  loop_detector.py  metrics.py
tests/: pii_regression.json  test_api_reference_completeness.py  test_api_reference_schemas.py  test_audit_logger_a1_2.py  test_audit_logger_a1_3.py  test_budget_enforcer.py  test_budget_recovery.py  test_budget_replay.py  test_budget_stress.py  test_compliance.py  test_deployment_guide_completeness.py  test_docs_branding.py  test_docs_links.py  test_dpop_adapter_boundary.py  test_dpop_replay_store.py  test_dpop_replay_store_integration.py  test_guardrails.py  test_hitl_endpoints.py  test_hitl_pending_approval.py  test_hitl_rbac_matrix.py  test_hitl_timeout_contract.py  test_jit_retry_rotation.py  test_jit_token.py  test_loop_detector.py  test_loop_recovery.py  test_main_hitl_startup.py  test_metrics_completeness.py  test_metrics_w1_3.py  test_no_workflow_stubs.py  test_opa_wiring.py  test_orchestrator.py  test_orchestrator_no_bypass.py  test_otel_spans_a1_1.py  test_p2_chaos.py  test_p2_encryption.py  test_p2_retry.py  test_pending_approval_demo_script.py  test_pending_approval_metrics.py  test_pii_advanced.py  test_pii_s14.py  (+13 more)
